Mapprio/main/default/objects/MapprioResponse__c/MapprioResponse__c.object-meta.xml
<CustomObject>
    <label>Mapprio Response</label>
    <nameField>
        <label>Mapprio Response ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapprio Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>