Mapprio/main/default/objects/MapprioResponse__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mapprio Responses</relationshipLabel>
    <relationshipName>Mapprio_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>