Mapprio/main/default/objects/MapprioResponse__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer</label>
    <referenceTo>MapprioAnswer__c</referenceTo>
    <relationshipLabel>Mapprio Responses</relationshipLabel>
    <relationshipName>MapprioResponses</relationshipName>
    <type>Lookup</type>
</CustomField>