Mapprio/main/default/objects/MapprioResponse__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Mapprio Responses</relationshipLabel>
    <relationshipName>Mapprio_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>