Mapprio/main/default/objects/MapprioResponse__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mapprio Responses</relationshipLabel>
    <relationshipName>Mapprio_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>