Mapprio/main/default/objects/MapprioResponse__c/fields/FormLabel__c.field-meta.xml
<CustomField>
    <fullName>FormLabel__c</fullName>
    <label>Form Label</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>