Mapprio/main/default/objects/MapprioResponse__c/fields/MapprioSmartSurveyName__c.field-meta.xml
<CustomField>
    <fullName>MapprioSmartSurveyName__c</fullName>
    <label>Mapprio Smart Survey Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>