Mapprio/main/default/objects/MapprioResponse__c/fields/QuestionScale__c.field-meta.xml
<CustomField>
    <fullName>QuestionScale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Scale</label>
    <referenceTo>MapprioQuestion__c</referenceTo>
    <relationshipLabel>Mapprio Responses (Question Scale)</relationshipLabel>
    <relationshipName>MapprioResponsesByScale</relationshipName>
    <type>Lookup</type>
</CustomField>