Mapprio/main/default/objects/MapprioResponse__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>MapprioResponseSession__c</referenceTo>
    <relationshipLabel>Mapprio Responses</relationshipLabel>
    <relationshipName>MapprioResponses</relationshipName>
    <type>Lookup</type>
</CustomField>