Mapprio/main/default/objects/MapprioResponse__c/fields/SubmitDateTime__c.field-meta.xml
<CustomField>
    <fullName>SubmitDateTime__c</fullName>
    <label>Submit Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>