Mapprio/main/default/objects/MapprioResponse__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AnswerCloud</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Essay</fullName>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
            <value>
                <fullName>Net Promoter Score</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>